--- a/src/courier/ManagingStaffDasboard.form
+++ b/src/courier/ManagingStaffDasboard.form
@@ -136,6 +136,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="FeedBack"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButton6">
       <Properties>
