--- a/src/courier/ManagingStaffReportManagement.form
+++ b/src/courier/ManagingStaffReportManagement.form
@@ -26,14 +26,13 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="yearlybtn" alignment="1" min="-2" pref="405" max="-2" attributes="0"/>
                   <Component id="dailybtn" alignment="1" min="-2" pref="405" max="-2" attributes="0"/>
                   <Component id="monthlybtn" alignment="1" min="-2" pref="405" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="1" attributes="0">
-                  <Component id="feedbackbtn" alignment="1" min="-2" pref="405" max="-2" attributes="0"/>
-                  <Component id="userlistbtn" alignment="1" min="-2" pref="405" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="userlistbtn" min="-2" pref="405" max="-2" attributes="0"/>
+                  <Component id="yearlybtn" min="-2" pref="405" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="47" max="32767" attributes="0"/>
           </Group>
@@ -67,17 +66,17 @@
                   <Group type="102" attributes="0">
                       <Component id="monthlybtn" min="-2" pref="50" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                      <Component id="dailybtn" min="-2" pref="50" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="dailybtn" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                          <Component id="yearlybtn" alignment="3" min="-2" pref="50" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <Group type="102" attributes="0">
                       <Component id="userlistbtn" min="-2" pref="50" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                      <Component id="feedbackbtn" min="-2" pref="50" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Component id="yearlybtn" min="-2" pref="50" max="-2" attributes="0"/>
-              <EmptySpace pref="82" max="32767" attributes="0"/>
+              <EmptySpace pref="150" max="32767" attributes="0"/>
               <Component id="backbtn" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -125,17 +124,6 @@
         </Property>
         <Property name="text" type="java.lang.String" value="User List"/>
       </Properties>
-    </Component>
-    <Component class="javax.swing.JButton" name="feedbackbtn">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="18" style="0"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="Feedback"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="feedbackbtnActionPerformed"/>
-      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="yearlybtn">
       <Properties>
