--- a/src/courier/ManagingStaffDasboard.form
+++ b/src/courier/ManagingStaffDasboard.form
@@ -171,6 +171,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Profile"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton9ActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
