--- a/src/courier/DeliveryStaffDashboardPage.form
+++ b/src/courier/DeliveryStaffDashboardPage.form
@@ -31,10 +31,15 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="129" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="userwellbl" min="-2" pref="392" max="-2" attributes="0"/>
-                  <Component id="deliveryorderbtn" max="32767" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <Component id="deliveryorderbtn" pref="392" max="32767" attributes="0"/>
+                      <EmptySpace pref="164" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <Component id="userwellbl" min="-2" pref="466" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace pref="164" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
@@ -63,7 +68,7 @@
     <Component class="javax.swing.JLabel" name="userwellbl">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Tahoma" size="35" style="1"/>
+          <Font name="Tahoma" size="24" style="1"/>
         </Property>
       </Properties>
     </Component>
