--- a/src/courier/UserProfilePassword.form
+++ b/src/courier/UserProfilePassword.form
@@ -35,7 +35,6 @@
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="usernametxt" pref="165" max="32767" attributes="0"/>
                           <Component id="passwordtxt" max="32767" attributes="0"/>
-                          <Component id="typetxt" alignment="0" pref="165" max="32767" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
@@ -79,9 +78,7 @@
                       <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
-              <Component id="typetxt" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="usernamelbl" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="usernametxt" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -141,6 +138,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Save"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="savebtnActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="usernametxt">
       <Properties>
@@ -207,13 +207,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="showpasschkActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JTextField" name="typetxt">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Dialog" size="12" style="0"/>
-        </Property>
-      </Properties>
     </Component>
   </SubComponents>
 </Form>
