--- a/src/courier/DeliveryStaffChangeStatusAndView.form
+++ b/src/courier/DeliveryStaffChangeStatusAndView.form
@@ -251,9 +251,9 @@
                                   <Component id="senderphonelbl" alignment="3" min="-2" max="-2" attributes="0"/>
                               </Group>
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="3" attributes="0">
+                              <Group type="103" groupAlignment="0" attributes="0">
                                   <Component id="senderemailtxt" alignment="0" min="-2" max="-2" attributes="0"/>
-                                  <Component id="senderemaillbl" alignment="3" min="-2" max="-2" attributes="0"/>
+                                  <Component id="senderemaillbl" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                       </Group>
